--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.21.0
 aiohttp==3.8.5
 aiosignal==1.3.1
 altair==4.2.2
@@ -16,8 +17,11 @@ Babel==2.12.1
 backcall==0.2.0
 backoff==2.2.1
 beautifulsoup4==4.8.2
+bitsandbytes==0.41.0
 bleach==6.0.0
 blinker==1.6.2
+boto3==1.28.55
+botocore==1.31.55
 cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
@@ -27,30 +31,47 @@ chroma-hnswlib==0.7.2
 chromadb==0.3.29
 click==8.1.7
 clickhouse-connect==0.6.8
+cloudpickle==2.2.1
 coloredlogs==15.0.1
 comm==0.1.4
 compressed-rtf==1.0.6
+contextlib2==21.6.0
+contourpy==1.1.1
+cycler==0.11.0
+Cython==3.0.2
 dataclasses-json==0.5.14
+datasets==2.14.0
 debugpy==1.6.7.post1
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.7
+dnspython==2.4.2
 docx2txt==0.8
 duckdb==0.8.1
 ebcdic==1.1.1
+einops==0.6.1
+emoji==2.8.0
 entrypoints==0.4
 executing==1.2.0
 extract-msg==0.28.7
+faiss-cpu==1.7.4
 fastapi==0.85.1
 fastjsonschema==2.18.0
+filelock==3.12.4
+filetype==1.2.0
 flatbuffers==23.5.26
+fonttools==4.42.1
 fqdn==1.5.1
 frozenlist==1.4.0
+fsspec==2023.9.2
 gitdb==4.0.10
 GitPython==3.1.32
+google-pasta==0.2.0
 greenlet==2.0.2
 h11==0.14.0
 hnswlib==0.7.0
 httptools==0.6.0
+huggingface-hub==0.17.3
 humanfriendly==10.0
 idna==3.4
 IMAPClient==2.1.0
@@ -63,7 +84,10 @@ ipywidgets==8.1.0
 isoduration==20.11.0
 jedi==0.19.0
 Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.3.2
 json5==0.9.14
+jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
@@ -79,24 +103,30 @@ jupyterlab==4.0.5
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.8
 jupyterlab_server==2.24.0
-langchain==0.0.284
-langsmith==0.0.27
+kiwisolver==1.4.5
+langchain==0.0.312
+langsmith==0.0.43
+loguru==0.7.2
 lxml==4.9.3
 lz4==4.3.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+matplotlib==3.8.0
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==3.0.1
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.4
+multiprocess==0.70.15
 mypy-extensions==1.0.0
 nbclient==0.8.0
 nbconvert==7.7.4
 nbformat==5.9.2
 nest-asyncio==1.5.7
+networkx==3.1
+nltk==3.8.1
 notebook==7.0.2
 notebook_shim==0.2.3
 numexpr==2.8.5
@@ -111,12 +141,17 @@ packaging==23.1
 pandas==1.5.3
 pandocfilters==1.5.0
 parso==0.8.3
+pathos==0.3.1
 pdfminer.six==20191110
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
+pinecone-client==2.2.2
 platformdirs==3.10.0
+plotly==5.17.0
 posthog==3.0.2
+pox==0.3.3
+ppft==1.7.6.7
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
 protobuf==3.20.3
@@ -131,11 +166,15 @@ pydantic==1.10.12
 pydeck==0.8.1b0
 Pygments==2.16.1
 Pympler==1.0.1
+pyparsing==3.1.1
 pypdf==3.15.4
 PyPika==0.48.9
+pyre-extensions==0.0.29
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-iso639==2023.6.15
 python-json-logger==2.0.7
+python-magic==0.4.27
 python-pptx==0.6.21
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
@@ -151,9 +190,18 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.5.2
 rpds-py==0.9.2
+s3transfer==0.7.0
+sagemaker==2.188.0
+schema==0.7.5
+scikit-learn==1.3.1
+scipy==1.11.2
+seaborn==0.12.2
 semver==3.0.1
 Send2Trash==1.8.2
+sentence-transformers==2.1.0
+sentencepiece==0.1.99
 six==1.12.0
+smdebug-rulesconfig==1.0.1
 smmap==5.0.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
@@ -165,10 +213,13 @@ starlette==0.20.4
 streamlit==1.26.0
 streamlit-chat==0.0.2.2
 sympy==1.12
+tabulate==0.9.0
+tblib==1.7.0
 tenacity==8.2.3
 termcolor==2.2.0
 terminado==0.17.1
 textract==1.6.5
+threadpoolctl==3.2.0
 tiktoken==0.4.0
 tinycss2==1.2.1
 tokenizers==0.13.3
@@ -177,10 +228,12 @@ toolz==0.12.0
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.9.0
+transformers==4.31.0
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
 tzlocal==4.3.1
+unstructured==0.10.16
 uri-template==1.3.0
 urllib3==1.26.16
 uvicorn==0.23.2
@@ -195,8 +248,10 @@ websocket-client==1.6.1
 websockets==11.0.3
 wget==3.2
 widgetsnbextension==4.0.8
+xformers==0.0.20
 xlrd==1.2.0
 XlsxWriter==3.1.2
+xxhash==3.3.0
 yarl==1.9.2
 zipp==3.16.2
 zstandard==0.21.0
